Frankbelford/uatv1ba/force-app/main/default/objects/Case/fields/Subject_Client_Query__c.field-meta.xml
<CustomField>
    <fullName>Subject_Client_Query__c</fullName>
    <label>Subject Client Query</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>General Query</fullName>
            </value>
            <value>
                <fullName>Invoice Query</fullName>
            </value>
            <value>
                <fullName>Vacancy Query</fullName>
            </value>
            <value>
                <fullName>Job Order Query</fullName>
            </value>
            <value>
                <fullName>Hour Submission Query</fullName>
            </value>
            <value>
                <fullName>Timesheet Query</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>