Frankbelford/uatv1ba/force-app/main/default/objects/Case/fields/Subject_Query__c.field-meta.xml
<CustomField>
    <fullName>Subject_Query__c</fullName>
    <label>Subject Query</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pay Query</fullName>
            </value>
            <value>
                <fullName>Shift Query</fullName>
            </value>
            <value>
                <fullName>Holiday Query</fullName>
            </value>
            <value>
                <fullName>General Query</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>