Frankbelford/uatv1ba/force-app/main/default/objects/Case/listViews/Chat_Bot_Queue_Case.listView-meta.xml
<ListView>
    <fullName>Chat_Bot_Queue_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Chat Bot Queue</label>
    <queue>Chat_Bot_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>